--- a/rxbus/src/main/AndroidManifest.xml
+++ b/rxbus/src/main/AndroidManifest.xml
@@ -11,4 +11,4 @@
   ~   the specific language governing permissions and limitations under the License.
   -->
 
-<manifest package="com.kevalpatel2106.rxbus"/>
+<manifest package="rxbus"/>
