--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -12,6 +12,7 @@
  */
 
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 26
@@ -34,7 +35,8 @@ android {
 }
 
 dependencies {
-    compile project(':simple-rxbus')
+    compile project(':rxbus-annotations')
+    compile project(':rxbus')
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile 'com.android.support:support-v4:26.+'
+    compile 'com.android.support:support-v4:26.0.0-alpha1'
 }
