--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -12,7 +12,6 @@
  */
 
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 26
@@ -35,7 +34,7 @@ android {
 }
 
 dependencies {
-    compile project(':rxbus-annotations')
+    annotationProcessor project(':rxbus-annotations')
     compile project(':rxbus')
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:support-v4:26.0.0-alpha1'
