--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -34,7 +34,7 @@ android {
 }
 
 dependencies {
-    compile project(':simple-rxbus')
+    compile project(':rxbus')
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:support-v4:26.+'
 }
