--- a/settings.gradle
+++ b/settings.gradle
@@ -11,4 +11,4 @@
  *   the specific language governing permissions and limitations under the License.
  */
 
-include ':sample', ':simple-rxbus'
+include ':sample', ':rxbus'
