--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -36,5 +36,5 @@ android {
 dependencies {
     compile project(':rxbus')
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile 'com.android.support:support-v4:26.+'
+    compile 'com.android.support:support-v4:26.0.0-alpha1'
 }
