--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -35,6 +35,7 @@ android {
 
 dependencies {
     compile project(':rxbus')
+    compile project(':rxbus-annotations')
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:support-v4:26.0.0-alpha1'
 }
