--- a/rxbus-compiler/build.gradle
+++ b/rxbus-compiler/build.gradle
@@ -11,44 +11,20 @@
  *   the specific language governing permissions and limitations under the License.
  */
 
-apply plugin: 'com.android.library'
+apply plugin: 'java'
 apply plugin: 'bintray-release'
 apply from: '../misc/config.gradle'
 apply from: '../misc/deps.gradle'
 
-android {
-    compileSdkVersion buidlConfig.compile
-    buildToolsVersion buidlConfig.buildToolVersion
-
-    compileOptions {
-        sourceCompatibility javaCompatibility.sourceCompatibility
-        targetCompatibility javaCompatibility.targetCompatibility
-    }
-
-    defaultConfig {
-        //sdks
-        minSdkVersion buidlConfig.min
-        targetSdkVersion buidlConfig.target
-
-        consumerProguardFiles 'proguard-rules.pro'
-    }
-
-    packagingOptions packageExcludes
-
-    // This is important, it will run lint checks but won't abort build
-    lintOptions {
-        abortOnError false
-    }
-}
-
 dependencies {
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile "io.reactivex.rxjava2:rxjava:2.1.0"
-    compile 'com.android.support:support-annotations:25.3.1'
+    compile project(':rxbus-annotations')
 }
+
+sourceCompatibility = javaCompatibility.sourceCompatibility
+targetCompatibility = javaCompatibility.targetCompatibility
 
 publish {
-    artifactId = bintrayLibs.rxbus
+    artifactId = bintrayLibs.rxbusAnnotations
     userOrg = bintrayConfig.userOrg
     groupId = bintrayConfig.groupId
     publishVersion = bintrayConfig.publishVersion
